kernels/channel/tests/should_fail/003_just_one_value.js
module.exports = {
    state: {
        data: null
    },
    fn: ($) => {
        // nothing to do
    },
    _: {
        fn: [],
        subs: [],
        deps: {}, // no dependencies tracked
        cache: { blerg: null },
        fatal: {}
    },
    should_fail: true
}